Bring Night Vision configurability on par with that of Gamma